Heap test cases are fixed.
Now need to fix the null value case value added in the heap.